# TinkScreen

./: PulseModeration.ipynb  README.md  pyproject.toml  requirements.txt
API/: app.py  auth.py  my_err.py  nohup.out  settings.py
API/api/: __init__.py  check_api.py  dependencies.py  user_api.py
API/bot/: TOKENS.py  bot.py
API/database/: APIv2.db  __all_models.py  base.py  db_session.py
API/database/check/: check_func.py  check_model.py
API/database/result/: resul_func.py  result_model.py
API/database/user/: user_func.py  user_model.py
API/model_data/: 0505_keras_tokenizer.pickle  keras_tokenizer.pickle
API/model_data/focloss_pulse_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
API/model_data/focloss_pulse_model/variables/: variables.index
API/model_data/pulse_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
API/model_data/pulse_model/variables/: variables.index
API/schemas/: check_pdc.py  result_pdc.py  user_pdc.py  violation_type_pdc.py
API/service/: check.py  model.py  user.py
BOTv2/: .env.example  __main__.py  commands.py  my_errors.py  settings.py
BOTv2/dialogs/: __init__.py  dialogs.py  states.py  universal_methods.py
BOTv2/dialogs/windows/bot_info/: bot_info.py
BOTv2/dialogs/windows/check/: check.py  methods.py
BOTv2/dialogs/windows/history/: history.py  methods.py
BOTv2/dialogs/windows/menu/: menu.py  (+1 more)
BOTv2/schemas/: resources_pdc.py
BOTv2/services/restapi/: URLS.py  restapi.py  scripts.py
bot/: bot.py  methods.py  telegram_bot.py
bot/api/: URLS.py  api_functions.py
bot/getters_funcs/: getters.py
(+6 files in other folders)
