[tool.poetry]
name = "tinkscreen"
version = "0.1.0"
description = ""
authors = ["Artem <artem00561@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy = "^2.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
