[tool.poetry]
name = "tinkscreen"
version = "0.1.0"
description = ""
authors = ["Artem <artem00561@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy = "^2.0.12"
aiogram-dialog = "^1.9.0"
nltk = "^3.8.1"
tensorflow-io-gcs-filesystem = "<0.32"
tensorflow = "^2.12.0"
keras = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
